sync running source-service changes